# rc-flight-legacy

./: .gitignore  AUTHORS  COPYING  LICENSE  LICENSE-UMN.txt  Makefile.am  NEWS  NEWS.md  README  README-beaglebone.md  README-omega2.md  README-qemu.md  README-sik-radiomodem.md  README.arm-cross-python  README.beaglebone  README.build  README.gumstix  README.gumstix-oe  README.kernel  README.md  README.mpc5200  README.overo-oe  README.verdex  TODO  acinclude.m4.REMOVED.git-id  autogen.sh  configure.ac  release.txt  setpath-gumstix-oe.sh  setpath-gumstix.sh  setpath-overo-oe.sh  setpath-verdex.sh  setup.py
extras/: acinclude.m4  autogen.sh  configure.ac
src/: Makefile.am  ahrs.c  ahrs.c.REMOVED.git-id  ahrs.cpp  ahrs.cpp.REMOVED.git-id  ahrs.h  ahrs_main.c  ahrs_main.c.REMOVED.git-id  aura.cpp  avionics.c  avionics.c.REMOVED.git-id  console_link.cpp  console_link.h  control.c  control.cpp  control.h  decoder.c  flight.py  globaldefs.h  groundstation.c  groundstation.cpp  groundstation.h  imugps.c  imugps.c.REMOVED.git-id  imugps.cpp  imugps.cpp.REMOVED.git-id  imugps.h  logging.cpp  logging.h  main.c  main.cpp  matrix.c  matrix.c.REMOVED.git-id  matrix.h  misc.c  misc.cpp  misc.h  navfunc.c  navfunc.h  navigation.c  (+17 more)
src/actuators/: Makefile.am  act_fgfs.cpp  act_fgfs.cxx  act_fgfs.h  act_fgfs.hxx  act_goldy2.cxx  act_goldy2.hxx  act_mgr.cpp  act_mgr.cpp.REMOVED.git-id  act_mgr.cxx  act_mgr.h  act_mgr.hxx  ardusensor.cxx  ardusensor.cxx.REMOVED.git-id  ardusensor.hxx  arduservo.cxx  arduservo.cxx.REMOVED.git-id  arduservo.hxx
src/adns/: Makefile.am  adns_mgr.cpp  adns_mgr.h  umn_interface.cpp  umn_interface.h
src/archive/: land2.py  windtri.py
src/comms/: Makefile.am  aura_messages.h  aura_messages.json  aura_messages.py  checksum.cpp  checksum.cxx  checksum.h  checksum.hxx  console_link.cpp  console_link.cpp.REMOVED.git-id  console_link.h  display.cpp  display.cxx  display.h  display.hxx  display.py  events.cpp  events.cxx  events.h  events.hxx  events.py  groundstation.cpp  logging.cpp  logging.cpp.REMOVED.git-id  logging.cxx  logging.h  logging.hxx  logging.py  netBuffer.cxx  netBuffer.h  netChannel.cxx  netChannel.h  netChat.cxx  netChat.h  netSocket.cxx  netSocket.cxx.REMOVED.git-id  ns_messages.py  packer.cxx  packer.hxx  packer.py  (+28 more)
src/control/: Makefile.am  actuators.cpp  actuators.h  airshow.cxx  airshow.hxx  ap.cpp  ap.cxx  ap.h  ap.hxx  cas.cpp  cas.cxx  cas.h  cas.hxx  circle.py  circle_mgr.cxx  circle_mgr.hxx  component.h  component.hxx  control.cpp  control.cpp.REMOVED.git-id  control.cxx  control.h  control.hxx  dig_filter.cpp  dig_filter.cxx  dig_filter.h  dig_filter.hxx  dtss.cpp  dtss.cxx  dtss.h  dtss.hxx  navigation.py  pid.cpp  pid.cxx  pid.h  pid.hxx  pid_vel.cpp  pid_vel.cxx  pid_vel.h  pid_vel.hxx  (+26 more)
src/drivers/: APM2.cpp  FGFS.cpp  FGFS.h  Makefile.am  airdata.cpp  airdata.h  airdata_bolder.h  airdata_mgr.cpp  airdata_mgr.h  cal_temp.cpp  cal_temp.h  driver.h  driver_mgr.cpp  driver_mgr.h  fgfs.cpp  fgfs.h  gps.cpp  gps.h  gps_gpsd.cpp  gps_gpsd.h  gps_mgr.cpp  gps_mgr.h  gps_ublox6.cpp  gps_ublox8.cpp  gps_ublox8.h  imu_mgr.cpp  imu_vn100_spi.cpp  imu_vn100_spi.h  lightware.cpp  lightware.h  maestro.cpp  maestro.h  pilot.cpp  pilot.h  pilot_helper.py  pilot_mgr.cpp  pilot_mgr.h  raw_sat.cpp  raw_sat.h  ublox6.cpp  (+6 more)
src/filters/: Makefile.am  filter_mgr.cpp  filter_mgr.cpp.REMOVED.git-id  filter_mgr.cxx  filter_mgr.h  filter_mgr.hxx  ground.cpp  ground.cxx  ground.hxx  tecs.cxx  tecs.hxx  umn_interface.cpp  umn_interface.h  wind.cpp  wind.cxx  wind.hxx
src/health/: Makefile.am  health.cpp  health.cxx  health.h  health.hxx  health.py  loadavg.cpp  loadavg.cxx  loadavg.h  sgbatmon.cpp  sgbatmon.h
src/include/: Makefile.am  globaldefs.h  util.h
src/init/: Makefile.am  globals.cpp  globals.cxx  globals.h  globals.hxx
src/main/: Makefile.am  aura.cpp  aura.cxx  config.xml  decoder.c  globals.cxx  globals.hxx  imu_mgr.cxx  imu_mgr.hxx  ugear.cpp  ugear.cpp.REMOVED.git-id  ugear_gumstix.cpp  ugear_gumstix.cpp.REMOVED.git-id  ugear_mission.cpp  ugear_mnav.cpp  ugear_mnav.cpp.REMOVED.git-id  ugear_timer.cpp  ugear_timer.cpp.REMOVED.git-id
src/math/: Makefile.am  SGGeoc.hxx  SGGeod.hxx  SGGeod.hxx.REMOVED.git-id  SGGeodesy.cxx  SGGeodesy.cxx.REMOVED.git-id  SGMath.hxx  SGMatrix.hxx.REMOVED.git-id  SGQuat.hxx.REMOVED.git-id  SGVec2.hxx  SGVec2.hxx.REMOVED.git-id  SGVec3.hxx.REMOVED.git-id  SGVec4.hxx.REMOVED.git-id  calibrate.cxx  calibrate.hxx  simgear_constants.h
src/mission/: Makefile.am  greatcircle.py  mission.cxx  mission_mgr.py
src/payload/: Makefile.am  payload_mgr.cpp  payload_mgr.cxx  payload_mgr.h  payload_mgr.hxx
src/props/: Makefile.am  mytest.cxx  props.cxx  props.cxx.REMOVED.git-id  props.hxx  props.hxx.REMOVED.git-id  props_io.cxx  props_io.cxx.REMOVED.git-id  props_io.hxx  props_test.cxx  props_test.cxx.REMOVED.git-id
src/props-old/: mytest.cxx  props.cxx  props_io.cxx  props_io.hxx  props_test.cxx
src/python/: Makefile.am  multiply.py  props.py  props_test.cxx  props_test.py  pymission.cxx  pymission.hxx  pymodule.cxx  pymodule.hxx  pyprops.cxx  pyprops.hxx  python_sys.cxx  python_sys.hxx  test3.cxx
src/route/: area.py  line.py  point.py  test_lines.py  vector.py
src/sensors/: APM2.cpp  APM2.cxx  APM2.hxx  Aura3.cxx  FGFS.cpp  FGFS.cxx  FGFS.hxx  GPS.cpp  GPS.h  Goldy2.cxx  Goldy2.hxx  IMU.cpp  IMU.h  Makefile.am  airdata_bolder.cpp  airdata_bolder.cxx  airdata_bolder.hxx  airdata_mgr.cpp  airdata_mgr.cpp.REMOVED.git-id  airdata_mgr.cxx  airdata_mgr.h  airdata_mgr.hxx  airdata_uart.cxx  ardupilot.cxx  ardupilot.cxx.REMOVED.git-id  ardupilot.hxx  cal_temp.cxx  cal_temp.hxx  calibrate.cxx  calibrate.hxx  gps_fgfs.cxx  gps_fgfs.hxx  gps_gpsd.cpp  gps_gpsd.cxx  gps_gpsd.h  gps_gpsd.hxx  gps_mediatek.cxx  gps_mediatek.hxx  gps_mgr.cpp  (+73 more)
uglink/: Makefile.am  command.hxx  current.cxx  current.hxx  geo.cxx  geo.hxx  globals.hxx  iochannel.hxx  messages.cxx  messages.hxx  net_ctrls.hxx  push_udp.cxx  push_udp.hxx  serial.hxx  sg_file.cxx  sg_file.hxx  telnet.cxx  telnet.hxx  uglink.cxx  websocket.cxx  websocket.hxx  wp_mgr.hxx
(+673 files in other folders)
