noinst_LIBRARIES = libcontrol.a

libcontrol_a_SOURCES = \
	cas.cxx cas.hxx \
	circle_mgr.cxx circle_mgr.hxx \
	control.cpp control.h \
	route.cxx route.hxx \
	route_mgr.cxx route_mgr.hxx \
	waypoint.cxx waypoint.hxx \
	xmlauto.cxx xmlauto.hxx

AM_CPPFLAGS = -I$(VPATH)/.. -I$(VPATH)/../.. @PYTHON_INCLUDES@
