noinst_LIBRARIES = libcontrol.a

libcontrol_a_SOURCES = \
	ap.cxx ap.hxx \
	cas.cxx cas.hxx \
	component.hxx \
	control.cxx control.hxx \
	dig_filter.cxx dig_filter.hxx \
	dtss.cxx dtss.hxx \
	pid.cxx pid.hxx \
	pid_vel.cxx pid_vel.hxx \
	predictor.cxx predictor.hxx \
	summer.cxx summer.hxx \
	tecs.cxx tecs.hxx

AM_CPPFLAGS = -I$(VPATH)/.. -I$(VPATH)/../..
