sbin_PROGRAMS = autologin config_xtend pressanykey stopme

autologin_SOURCES = \
	autologin.c

config_xtend_SOURCES = \
	config_xtend.cxx

pressanykey_SOURCES = \
	pressanykey.c

stopme_SOURCES = \
	stopme.cxx

stopme_LDADD = \
	$(top_builddir)/src/util/libutil.a

INCLUDES = -I$(top_srcdir)/src -I$(top_builddir)/src
