# For StarGate compile uncomment the following lines:
# whetstone_LDFLAGS = -nodefaultlibs
# whetstone_MORELIBS = -lm -lrt -lgcc -lc

# For GumStix compile uncomment the following lines instead:
whetstone =
whetstone_MORELIBS = -lm

bin_PROGRAMS = whetstone

whetstone_SOURCES = \
	whetstone.c

whetstone_LDADD = \
	$(whetstone_MORELIBS)

