noinst_LIBRARIES = libumngnss_euler.a

libumngnss_euler_a_SOURCES = \
	umngnss_euler.cpp umngnss_euler.h \
	adns.c adns.h \
	earth.h earth.c \
	eulerdcm.h eulerdcm.c \
	kalmanfilter.c kalmanfilter.h \
	ivl_matrix.c ivl_matrix.h \
	ivl_mem.h ivl_mem.c \
	matrix.c matrix.h \
	strapdown.h strapdown.c \
	worldcoord.h worldcoord.c

AM_CPPFLAGS = -I$(VPATH)/.. -I$(VPATH)/../..
